crates/monochange_integration_tests/tests/snapshots/group_release_note_fallback__changelog__group-real-member-note__core.snap
---
source: crates/monochange_integration_tests/tests/group_release_note_fallback.rs
expression: normalize_commit_links(&contents)
---
# Changelog

## [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) (2026-04-06)

### Features

- **Add core feature.** Adds a visible core feature that the group changelog includes directly.
  _Owner:_ test · _Introduced in:_ [1aef008](https://github.com/ifiokjr/monochange/commit/1aef0089ab2c1ebaf3d1711f0be7e1330b39810d)
